--- a/Clase 9/clase9.html
+++ b/Clase 9/clase9.html
@@ -40,8 +40,8 @@
         <h1 class="bienvenida2">¡Es un placer tenerte aquí!</h1>
         <div class="container02">
           <div class="box01">
-              <p class="overlap2">¡Comederos en descuento!</p>
-              <p class="overlap2">COMEDEROS</p>            
+              <h3 class="overlap2">¡Comederos en descuento!</h3>
+              <p class="overlap3">COMEDEROS</p>            
           </div>
           <div class="box02">
             <img
